--- a/apps/python-app.yaml
+++ b/apps/python-app.yaml
@@ -4,6 +4,7 @@ metadata:
   name: creator
   namespace: apps
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: creator
@@ -29,6 +30,7 @@ metadata:
   name: worker
   namespace: apps
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: worker
