--- a/apps/keda-scaling.yaml
+++ b/apps/keda-scaling.yaml
@@ -2,7 +2,7 @@ apiVersion: keda.sh/v1alpha1
 kind: TriggerAuthentication
 metadata:
   name: keda-trigger-auth-redis-secret
-  namespace: apps
+  namespace: default
 spec:
   secretTargetRef:
   - parameter: password
@@ -13,7 +13,7 @@ apiVersion: keda.sh/v1alpha1
 kind: ScaledObject
 metadata:
   name: redis-scaledobject
-  namespace: apps
+  namespace: default
 spec:
   scaleTargetRef:
     name: worker
